# prevent-alt-win-menu

./: CHANGELOG.md  Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: release-plz.yml  rust.yml
examples/: simple.rs  threshold.rs
src/: error.rs  event_handler.rs  keyboard_hook.rs  lib.rs
tests/: integration.rs
