[package]
name = "prevent-alt-win-menu"
description = "Prevents the menu bar or Start menu from appearing when the Alt or Windows key is released"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/noriapi/prevent-alt-win-menu"
readme = "README.md"
keywords = ["windows", "start-menu", "menu-bar", "alt-key", "win-key"]
categories = [
  "accessibility",
  "api-bindings",
  "config",
  "gui",
  "os::windows-apis",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
  "aarch64-pc-windows-msvc",
  "i686-pc-windows-msvc",
  "x86_64-pc-windows-msvc",
]

[features]
log = ["dep:log"]

[dependencies]
log = { version = "0.4.27", optional = true }
oneshot = "0.1.11"
thiserror = "2.0.12"
windows = { version = "0.61.1", features = [
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
colog = "1.3.0"
uiautomation = { version = "0.21.2", features = ["event"] }
